fix: star z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -307,7 +307,6 @@ ul, li {
   position: absolute;
   right: 12px;
   top: 10px;
-  z-index: 4;
 }
 .main-content .container .post__body {
   padding: 25px;
